Predicting student score using Tensorflow

--- a/student _score.ipynb
+++ b/student _score.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Task 1: Prediction using Supervised Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Sparks Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading necessary libraries"
    ]
   },
@@ -492,22 +506,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5/5 [==============================] - 0s 20ms/sample - loss: 28.1470\n",
+      "5/5 [==============================] - 0s 997us/sample - loss: 28.1470\n",
       "28.146963119506836\n",
       "24    86\n",
       "15    95\n",
       "17    24\n",
       "5     20\n",
       "4     30\n",
-      "Name: Scores, dtype: int64\n",
-      "[[78.96117 ]\n",
+      "Name: Scores, dtype: int64 [[78.96117 ]\n",
       " [89.869606]\n",
       " [20.452234]\n",
       " [16.485527]\n",
@@ -518,8 +531,7 @@
    "source": [
     "print(model.evaluate(X_test,y_test))\n",
     "prediction = model.predict(X_test)\n",
-    "print(y_test.head(10))\n",
-    "print(prediction)"
+    "print(y_test,prediction)\n"
    ]
   },
   {
